<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/minDialogWidth"
    android:orientation="vertical"
    android:padding="@dimen/dimen_fifteen"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/dimen_card_corner_radius"
    app:cardElevation="0dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextEnabled="true"
        app:helperText="@string/helper_text_branch_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_company_branch_name"
            style="@style/customEditText"
            android:hint="@string/hint_branch_name"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_five">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_company_branch_address"
            style="@style/customEditText"
            android:hint="@string/hint_address"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_company_branch_latitude"
                style="@style/customEditText"
                android:hint="@string/hint_latitude"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_company_branch_longitude"
                style="@style/customEditText"
                android:hint="@string/hint_longitude"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/helper_text_radius">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_company_branch_radius"
            style="@style/customEditText"
            android:hint="@string/hint_radius_in_meters"
            android:imeOptions="actionDone"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextEnabled="true"
        android:layout_marginTop="@dimen/dimen_five"
        app:helperText="@string/helper_text_branch_code">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_company_branch_code"
            style="@style/customEditText"
            android:hint="@string/hint_branch_code"
            android:enabled="false"
            android:editable="false"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>


