<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_info"
        android:title="Information"
        android:icon="@drawable/ic_info_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_list"
        android:title="@string/menu_records_in_list"
        android:icon="@drawable/ic_list_white_24dp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_show_attendance_position_on_map"
        android:title="@string/menu_show_attendance_position_on_map"
        android:icon="@drawable/ic_list_white_24dp"
        app:showAsAction="never"/>
</menu>