<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/ToolbarTitle" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hint_for_location_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tap_over_map_to_select_location"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_fifteen"
        android:background="@drawable/bg_blue"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_refresh_location"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="@dimen/dimen_fifteen"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_location" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_fifteen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/customTextView"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/label_set_branch_location"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/dimen_xlarge" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_ten">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_location"
                        style="@style/customEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/hint_location"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_ten"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_latitude"
                            style="@style/customEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/hint_latitude"
                            android:imeOptions="actionNext"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_longitude"
                            style="@style/customEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/hint_longitude"
                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_user_location"
                    style="@style/customButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_ten"
                    android:text="@string/btn_save_and_proceed" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
